# bittree

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  document-db.session.sql
.agents/: agents.md
.claude/commands/: feature.md  review.md  security-review.md  simplify.md  tdd.md
docs/architecture/: ARCHITECTURE.md  CLOUD_PORTABILITY.md  DATA_MODEL.md  GLOSSARY.md
docs/architecture/adr/: ADR-001-surrealdb-leptos-fullstack-rust.md  ADR-002-switch-to-postgresql.md  ADR-003-grpc-selective-transport.md  ADR-004-full-microservices-from-day-one.md
docs/planning/: AWS_ROADMAP.md  DISTRIBUTED_SYSTEMS_STUDY_GUIDE.md  FEATURE_LIST.md  ROADMAP.md  SKILLS_ANALYSIS.md
infra/: prometheus.yml
libs/domain/src/: lib.rs
libs/infra/: Cargo.toml
libs/infra/src/: config.rs  errors.rs  lib.rs  macros.rs  telemetry.rs
libs/test-utils/: Cargo.toml
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/config/: config.yaml
services/auth-service/migrations/: 20260331081538_create_users_table.sql
services/auth-service/src/: config.rs  errors.rs  main.rs
services/auth-service/src/application/usecases/register/: command.rs  mod.rs  service.rs
services/auth-service/src/domain/: errors.rs  mod.rs  repository.rs  types.rs
services/auth-service/src/domain/entities/: user.rs
services/auth-service/src/infrastructure/: errors.rs  http.rs  mod.rs
services/auth-service/src/infrastructure/database/: bootstrap.rs  cache.rs  factory.rs  logger.rs  mod.rs  postgres.rs
services/auth-service/src/infrastructure/services/: register.rs
services/auth-service/src/presentation/: state.rs
services/auth-service/src/presentation/handlers/: health.rs  mod.rs  refresh.rs  register.rs
services/auth-service/src/presentation/routes/: auth.rs  health.rs
services/document-service/: Cargo.toml  Dockerfile
services/document-service/config/: config.yaml
services/document-service/migrations/: 20260506071043_create_pages_table.sql
services/document-service/src/: config.rs  errors.rs  lib.rs  main.rs
services/document-service/src/application/usecases/: mod.rs
services/document-service/src/domain/: errors.rs  repository.rs  types.rs
services/document-service/src/domain/entities/: block.rs  page.rs
services/document-service/src/infrastructure/: errors.rs  http.rs  mod.rs
services/document-service/src/infrastructure/database/: bootstrap.rs  cache.rs  factory.rs  logger.rs  postgres.rs
services/document-service/src/infrastructure/services/: mod.rs
services/document-service/src/presentation/: state.rs
services/document-service/src/presentation/handlers/: health.rs
services/document-service/src/presentation/routes/: health.rs
