[workspace]
resolver = "3"
members = [
  "libs/infra",
  "libs/domain",
  "libs/test-utils",
  "services/document-service",
  # Add each service as its phase begins:
  # "services/user-service",
  # "services/collaboration-service",
  # "services/search-service",
  # "services/storage-service",
  # "services/notification-service",
  # "services/analytics-service",
  # "services/webhook-service",
  # "services/audit-service",
  # "services/template-service",
  # "services/api-gateway",
  # "frontend",
]

[workspace.dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = [
  "cors",
  "trace",
  "request-id",
  "timeout",
  "compression-gzip",
] }
hyper = { version = "1.8.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde-aux = { version = "4.7.0" }
thiserror = { version = "2.0.18" }
anyhow = { version = "1.0.102" }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-bunyan-formatter = { version = "0.3.10" }
tracing-log = { version = "0.2.0" }
config = { version = "0.15.22" }
secrecy = { version = "0.10.3", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "migrate",
] }
fred = { version = "10.1.0", features = ["tokio-runtime"] }
async-nats = { version = "0.47.0" }
aws-sdk-s3 = { version = "1.127.0" }
aws-config = { version = "1.8.15" }
jsonwebtoken = { version = "10.3.0" }
argon2 = { version = "0.5.3" }
rand_core = { version = "0.10.0" }
uuid = { version = "1.22.0", features = ["v7", "serde"] }
moka = { version = "0.12.14", features = ["future"] }
chrono = { version = "0.4.44", features = ["serde"] }
paste = { version = "1.0.15" }
async-trait = { version = "0.1.89" }
bytes = { version = "1.11.1" }
futures = { version = "0.3.32" }
validator = { version = "0.20.0" }
leptos = { version = "0.8.17", features = ["ssr"] }
leptos_axum = { version = "0.8.8" }
tokio-test = { version = "0.4.5" }
